@@ -1,3 +1,7 @@
+* Thu Feb 14 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.3-0
+- Expanded the upper limit of the concat and stdlib Puppet module versions
+- Fixed a URL in the README.md
+
 * Thu Nov 01 2018 Jeanne Greulich <jeanner.greulich@onyxpoint.com> - 6.1.2-0
 - Static asset updates for puppet 5
 - Update badges in README.md
